--- a/posts/main/guides/messaging.mdx
+++ b/posts/main/guides/messaging.mdx
@@ -142,6 +142,12 @@ where the constructor options are as follows:
 
 It also has a `handleMessage` method (like all message handlers) that can be used to handle responses automatically.
 
+## `SkipWaitHandler`
+
+The `SkipWaitHandler` is a subclass of `MessageHandler` that listens for the `SKIP_WAITING` event. It is used to skip the waiting phase of the service worker and activate the new service worker immediately.
+
+A very simple handler, it doesn't take in any options and simply handles skipping workers. Should be paired with [`sendSkipWaitingMessage`](/docs/main/misc#send-skip-waiting-message) for maximum effect.
+
 ## Recommended Tips
 
 When building out your message handlers, I would advise the following:
