--- a/posts/main/hooks/use-pwa-manager.mdx
+++ b/posts/main/hooks/use-pwa-manager.mdx
@@ -12,8 +12,14 @@ main states like service worker registration and installation. The hook takes no
 It has a type definition as follows:
 
 ```ts
+type UpdateAvailable = {
+  isUpdateAvailable: boolean;
+  newWorker: ServiceWorker | null;
+};
+
 usePWAManager: () => {
   updateAvailable: boolean;
+  swUpdate: UpdateAvailable;
   promptInstall: () => void;
   swRegistration: ServiceWorkerRegistration | null;
   userInstallChoice: "accepted" | "dismissed" | null;
@@ -26,6 +32,13 @@ This is a boolean value that indicates if there is an update available for the P
 update available to the service worker and `false` otherwise.
 
 A good use case for this would be to implement a "prompt" to the user to reload the page when an update is available.
+
+## `swUpdate`
+
+This is an object that contains information about the update available, think of it as a more verbose `updateAvailable` property. It has the following properties:
+
+- `isUpdateAvailable`: A boolean value that indicates if there is an update available for the PWA application. This carries the same value as `updateAvailable`.
+- `newWorker`: A `ServiceWorker` object that represents the new service worker that is available for the PWA application (hasn't been activated yet). It is `null` if there is no update available.
 
 ## `promptInstall`
 
