🆕 flagged `SkipWaitHandler` as a new api

--- a/posts/main/guides/messaging.mdx
+++ b/posts/main/guides/messaging.mdx
@@ -142,7 +142,7 @@ where the constructor options are as follows:
 
 It also has a `handleMessage` method (like all message handlers) that can be used to handle responses automatically.
 
-## `SkipWaitHandler`
+## `SkipWaitHandler` 🆕
 
 The `SkipWaitHandler` is a subclass of `MessageHandler` that listens for the `SKIP_WAITING` event. It is used to skip the waiting phase of the service worker and activate the new service worker immediately.
 
