new CLI command: `update`

--- a/posts/main/guides/cli.mdx
+++ b/posts/main/guides/cli.mdx
@@ -42,6 +42,8 @@ remix-pwa manifest --dest app/pwa/manifest.ts # writes the manifest to `./app/pw
 
 ## `sw`
 
+*Alias: `service-worker`*
+
 Generate a service worker file. Alias: `service-worker`.
 
 Accepts one of the following arguments:
@@ -63,6 +65,27 @@ remix-pwa sw --dest app/pwa/service-worker.ts # writes the service worker to `./
   If changing the destination for service workers, ensure to update the Vite plugin accordingly.
 </Info>
 
----
+## `update` 🆕
 
-I hope to bump up the available commands in the future. If you have any task that you feel is repetitive when setting up, or just a new command/feature for the CLI. Feel free to create a discussion or open an issue.
+*Alias: `upgrade`*
+
+The `update` command allows you to easily update all or some of the present `@remix-pwa/*` packages in your project.
+
+It takes in the following arguments:
+
+- `--packages` (`-p`): The packages you want to update, without the `@remix-pwa/` prefix. Defaults to all packages
+- `--root` (`-r`): The root of the Remix project. Defaults to `process.cwd()` (current working directory)
+
+```sh
+# updates all packages
+npx remix-pwa update
+
+# updates just @remix-pwa/dev & @remix-pwa/sw
+npx remix-pwa update -p dev sw
+
+# updates all packages in the app/remix-app folder
+npx remix-pwa update -r ./apps/remix-app
+
+# Valid alias to the `update` command
+npx remix-pwa upgrade
+```
