--- a/posts/main/hooks/use-permission.mdx
+++ b/posts/main/hooks/use-permission.mdx
@@ -1,7 +1,7 @@
 ---
 title: usePermission
 description: "A hook on the Permission API; allowing you to check various permissions on the client."
-alternateTitle: 'usePermission 🆕'
+alternateTitle: usePermission
 order: 6
 toc: false
 ---
