docs: new Push API docs - `@remix-pwa/push`

--- a/posts/main/guides/messaging.mdx
+++ b/posts/main/guides/messaging.mdx
@@ -1,6 +1,6 @@
 ---
 title: Service Worker Messaging
-description: "Build an comprehensive communication system between your service worker and client."
+description: "Build a comprehensive communication system between your service worker and client."
 alternateTitle: Messaging
 ---
 
