📖 typo fixes + new message handler option

--- a/posts/main/apis/default-fetch-handler.mdx
+++ b/posts/main/apis/default-fetch-handler.mdx
@@ -1,7 +1,7 @@
 ---
-title: defaultFetchHander
+title: defaultFetchHandler
 description: "Your default handler for fetching requests in your Service Worker."
-alternateTitle: defaultFetchHander
+alternateTitle: defaultFetchHandler
 ---
 
 import Info from './info.tsx'
