--- a/posts/main/hooks/use-pwa-manager.mdx
+++ b/posts/main/hooks/use-pwa-manager.mdx
@@ -42,10 +42,17 @@ This is an object that contains information about the update available, think of
 
 ## `promptInstall`
 
-This is a method that allows you to customise the installation prompt for your PWA application. It is a function that you **must**
+This is an asynchronous method that allows you to customise the installation prompt for your PWA application. It is a function that you **must**
 call via a user interaction (click, hover, etc.) to trigger the installation prompt.
 
-Currently, you can't customise the prompt. I am working on making that possible in the not-so-distant future.
+It takes in an optional callback function that gets invoked if the user accepts the installation prompt
+
+```ts
+const { promptInstall } = usePWAManager()
+
+<button onClick={promptInstall}>Install without callback</button>
+<button onClick={async () => promptInstall(doSmthg)}>Install with callback</button>
+```
 
 ## `swRegistration`
 
