--- a/posts/main/guides/env.mdx
+++ b/posts/main/guides/env.mdx
@@ -13,4 +13,23 @@ You can also utilise `process.env.NODE_ENV` (in that order) within your service 
 
 ## Custom Variables
 
-Currently, Remix PWA doesn't offer up a way to access/set custom environment variables within the service worker. This should hopefully be rolling out in a future patch (*higher demand means it rolls out quicker 😉*).
+Remix PWA now allows for injecting custom variables via the `buildVariables` option in the Vite plugin configuration. This allows you to inject variables that are accessible within the service worker.
+
+```ts
+// vite.config.ts
+export default defineConfig({
+  plugins: [
+    remixPWA({
+      buildVariables: {
+        'process.env.PUBLIC_KEY': 'my-public-key',
+        // can also be in another format
+        'myVery_PuBlick3y': 'my-public-key-2',
+      },
+    }),
+  ],
+});
+
+// entry.worker.ts
+console.log(process.env.PUBLIC_KEY); // my-public-key
+console.log(process.env.myVery_PuBlick3y); // my-public-key-2
+```
