quick interim commit

--- a/posts/main/started/quick-start.mdx
+++ b/posts/main/started/quick-start.mdx
@@ -5,7 +5,7 @@ alternateTitle: Quick Start
 order: 1
 ---
 
-Remix PWA is a tool that allows you to easily integrate Progressive Web App features into your Remix project. This guide will walk you through the steps to get started with Remix PWA.
+<Tooltip tip="Remix Progressive Web App">Remix PWA</Tooltip> is a tool that allows you to easily integrate Progressive Web App features into your Remix project. This guide will walk you through the steps to get started with Remix PWA.
 
 ## Prerequisites
 
