--- a/posts/main/guides/push-api.mdx
+++ b/posts/main/guides/push-api.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Push API"
 description: "Push API enables web applications to receive push messages from servers for re-engaging users, delivering timely updates, and fostering a persistent connection with the app."
-alternateTitle: "Push API 🆕"
+alternateTitle: "Push API"
 ---
 
-import Info from './info.tsx'
+
 
 Imagine having a personal butler who can whisper reminders, share exciting news, or nudge you with friendly updates, all while you're busy with your daily activities. That's the magic of Push Notifications! With this feature, your web app can tap you on the shoulder, even when it's not the active tab or window on your screen.
 
