--- a/posts/main/hooks/use-push.mdx
+++ b/posts/main/hooks/use-push.mdx
@@ -1,11 +1,10 @@
 ---
 title: usePush
 description: "A one-in-all utility hook for handling everything push notifications in your PWA application!"
-alternateTitle: 'usePush 🆕'
+alternateTitle: 'usePush'
 order: 7
 ---
 
-import Info from './info.tsx'
 
 The `usePush` hook is built on the browser's Push API to provide the necessary utilities for handling push notifications in your PWA client.
 Present in the `@remix-pwa/push` package, the hook has the following type signature:
