--- a/posts/next/getting-started/community.mdx
+++ b/posts/next/getting-started/community.mdx
@@ -3,6 +3,12 @@ title: Community
 description: "Getting help from friends in the community"
 alternateTitle: Community
 order: 4
-stub: true
 ---
 
+Remix PWA is a community-driven project living within the Remix community.
+A community that's all about devs hanging out and having fun while building cool stuff for the web.
+
+To that end, please keep in my our [Code of Conduct](https://github.com/remix-pwa/monorepo/blob/dev/CODE_OF_CONDUCT.md).
+
+- [Discord](https://rmx.as/discord) - The Remix Discord server is just the right place to ask and answer questions, have conversations and share your work with the community.
+- [Github Discussions](https://github.com/orgs/remix-pwa/discussions) - This is the best place to propose changes to Remix PWA. Encourages open end conversations anyone can weigh in on.
